# horus-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.web.yml  pyproject.toml  test.py
.github/workflows/: tests.yml
src/scanner_mcp/: __init__.py  __main__.py  mcp_schemas.py  runtime.py  server.py
src/scanner_mcp/charts/: __init__.py  comparison.py  data.py  forward_returns.py  fundamentals.py  generator.py  layout.py  params.py  price_history.py  rendering.py  service.py
src/scanner_mcp/data/: __init__.py  cache.py  exchange_universe.py  fundamentals_utils.py  movers.py  provider.py
src/scanner_mcp/db/: __init__.py  store.py
src/scanner_mcp/indicators/: __init__.py  core.py  ratings.py  ta.py
src/scanner_mcp/market/: __init__.py  service.py
src/scanner_mcp/notify/: notifier.py
src/scanner_mcp/research/: __init__.py  forward_returns.py
src/scanner_mcp/scanner/: __init__.py  scheduler.py
src/scanner_mcp/signals/: __init__.py  calculations.py  catalog.py  confidence.py  evaluator.py  models.py  service.py
tests/: test_chart_price_history.py  test_charts_generator.py  test_data_modules.py  test_forward_returns.py  test_indicators.py  test_server_helpers.py  test_signal_calculations.py  test_signals_evaluator.py  test_store_and_scheduler.py
